--- a/poc/webapp/package.json
+++ b/poc/webapp/package.json
@@ -15,8 +15,9 @@
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.1",
-    "vuetify": "^2.6.12",
-    "vuex": "^3.6.2"
+    "vuetify": "^2.6.14",
+    "vuex": "^3.6.2",
+    "vuex-module-decorators": "^1.2.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
@@ -29,10 +30,13 @@
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-airbnb": "^6.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
+    "deepmerge": "^4.3.0",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-vue": "^8.0.3",
     "eslint-plugin-vuejs-accessibility": "^1.1.0",
+    "sass": "~1.32",
+    "sass-loader": "^13.2.0",
     "stylus": "^0.55.0",
     "stylus-loader": "^6.1.0",
     "typescript": "~4.5.5",
